@@ -8,6 +8,9 @@ for you, we'd consider it a severe bug, though.
 
 Version 0.9.8 ()
 
+	* TAP_SCHEMA columns now has new column_index column.  Its addition should
+	  be automatic as long as your TAP-published RDs are in order.
+
 	* EPN-TAP 2.0 changed some column and parameter names, and the mixin
 	  followed.  If you've already used EPN-TAP 2.0, you will have to re-import
 	  your data and slightly adapt your RD (e.g., c1_min -> c1min, 
